--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <!-- 現在の日付と曜日、時間を表示 -->
+        <p id="datetime">6/27 (金) 12:46</p>
+
+        <!-- 次の授業名を表示 -->
+        <p>次の授業は</p>
+        <h3 id="class">情報連携概論Ⅰ</h3>
+
+        <!-- 授業時間を表示 -->
+        <p id="class-time">13:00 ~ 14:30</p>
+
+        <!-- 教室番号を表示 -->
+        <h1 id="classroom">3105</h1>
+
         <script src="script.js"></script>
     </body>
 </html>
