1つ後の授業を表示するボタンの追加と不具合の修正

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <p id="class-time">13:00 ~ 14:30</p>
         <!-- 教室番号を表示 -->
         <h1 id="classroom">3105</h1>
+        <!-- １つ後の授業を表示するボタン -->
+        <button onclick="nextButton()">Next</button>
 
         <script src="script.js"></script>
     </body>
