--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <p id="class-time">13:00 ~ 14:30</p>
         <!-- 教室番号を表示 -->
         <h1 id="classroom">3105</h1>
-        <!-- １つ後の授業を表示するボタン -->
+        <!-- 表示を変更するボタン -->
+        <button>Previous</button>
+        <button>Current</button>
         <button onclick="nextButton()">Next</button>
 
         <script src="script.js"></script>
