必要ない文字の削除

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <p id="datetime"></p>
         <!-- 次の授業名を表示 -->
         <p>次の授業は</p>
-        <h3 id="class-name">情報連携概論Ⅰ</h3>
+        <h3 id="class-name"></h3>
         <!-- 授業時間を表示 -->
-        <p id="class-time">13:00 ~ 14:30</p>
+        <p id="class-time"></p>
         <!-- 教室番号を表示 -->
-        <h1 id="classroom">3105</h1>
+        <h1 id="classroom"></h1>
         <!-- 表示を変更するボタン -->
         <button>Previous</button>
         <button>Current</button>
