変数名を変更

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- 表示を変更するボタン -->
         <button>Previous</button>
         <button>Current</button>
-        <button onclick="nextButton()">Next</button>
+        <button onclick="showNextClass()">Next</button>
 
         <script src="script.js"></script>
     </body>
