ひとつ前の授業を表示するボタンの追加

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- 教室番号を表示 -->
         <h1 id="classroom"></h1>
         <!-- 表示を変更するボタン -->
-        <button>Previous</button>
+        <button onclick="showPreviousClass()">Previous</button>
         <button>Current</button>
         <button onclick="showNextClass()">Next</button>
 
